# AIAP-Assessments

./: .gitignore  AIAP19 EDA.ipynb  AIAP21 EDA.ipynb  AIAP22 EDA.ipynb  EDA_22GE-3F_Yang.ipynb  README.md  Syntax Practice.ipynb  pyproject.toml  requirements.txt  run.sh
.ipynb_checkpoints/: AIAP19 EDA-checkpoint.ipynb  AIAP22 EDA-checkpoint.ipynb  Syntax Practice-checkpoint.ipynb  eda (5)-checkpoint.ipynb  template-checkpoint.ipynb
src/: AI.py  aicli.py  assay.py  data_loader.py  engineer.py  model.py  modeling.py  preprocess.py
src/cleaning/: Cleaning_Template.py  agri_clean.py
src/commands/: data_loader.py  data_process.py  data_validation.py  feature_engineering.py  preprocessing.py
src/feature_engineering/: df_data.py  df_drop.py  df_ratio.py
src/models/: Hist_boost.py  MLPclassifier.py  SVC.py  XGB_BinaryClass.py  XGB_GroupKfold_Binary.py  XGB_GroupKfold_Multiclass.py  XGB_GroupKfold_Regression.py  XGboost.py  logRegression.py
src/preprocess/: basic1.py  temp.py
