# Root folder
[project]
name = "AIAP22-CLI"
version = "0.1"
authors = [
  {name = "Yang Peng", email = "yangcymbus@gamil.com"},
]

description = "CLI for AI Pipeline"
requires-python = ">=3.8"
dependencies = [
    "click",
]

[tool.setuptools]
package-dir = {"" = "src"}

[project.scripts]
AI = "AI:AI"  